# goit-web-hw-14

./: .env-example  .gitignore  alembic.ini  main.py  pyproject.toml  requirements.txt
docs/: conf.py  index.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
migrations/versions/: 0c6ad8606f50_add_field_confirmed_to_users_table.py  90b84ba5849e_edit.py  c5ea820224e9_create_relationship_between_contacnts_.py  cd2de124fc01_create_users_table.py  d935d2f96209_init.py
src/: schemas.py
src/conf/: config.py
src/database/: models.py
src/repository/: contacts.py  users.py
src/routes/: auth.py  contacts.py  users.py
src/services/: auth.py  email.py
src/services/templates/: confirm_email.html
tests/: conftest.py  test_repository_contacts.py  test_repository_users.py  test_route_contacts.py
